# aegis-cl

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: aead.rs  benchmark_aegis.rs  benchmark_aegis_cl.rs  mac.rs
src/: aegis128.rs  high.rs  lib.rs  low.rs  mid.rs  util.rs
src/aarch64/: aegis128.rs  aegis256.rs
src/aegis128/: core.rs
src/arch/: aarch64.rs  x86_64.rs
src/high/: aegis128.rs  aegis256.rs
src/low/: aarch64.rs  generic.rs  x86_64.rs
src/low/generic/: polyfill_x2.rs  polyfill_x4.rs  soft.rs
src/low/x86_64/: avx2_x2.rs  avx512_x4.rs  avx_l.rs
src/mid/: aegis128.rs  aegis256.rs  util.rs
