[package]
name = "aegis-cl"
version = "0.1.0"
edition = "2024"

[dependencies]
generic-array = "0.14"
hybrid-array = "0.3.0"
aead = { version = "0.6.0-rc.0", git = "https://github.com/RustCrypto/traits/" }
crypto-common = { version = "0.2.0-rc.2", git = "https://github.com/RustCrypto/traits/" }
block-buffer = "0.11.0-rc.4"
cipher = { version = "0.5.0-pre.8", git = "https://github.com/RustCrypto/traits/" }

[profile.release]
opt-level = 3
